Updated space launch section

--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -20,22 +20,22 @@ M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tude
 <p align="center">
     <a href="https://github-readme-stats.vercel.app/api?username=geoffreygarrett&show_icons=true&include_all_commits=true&theme=light/#gh-light-mode-only">
       <img width="420px"
-           alt="stats" 
+           alt="stats"
            src="https://github-readme-stats.vercel.app/api?username=geoffreygarrett&show_icons=true&include_all_commits=true&theme=light" />
     </a>
     <a href="https://github-readme-stats.vercel.app/api?username=geoffreygarrett&show_icons=true&include_all_commits=true&theme=dark/#gh-dark-mode-only">
       <img width="420px"
-           alt="stats" 
+           alt="stats"
            src="https://github-readme-stats.vercel.app/api?username=geoffreygarrett&show_icons=true&include_all_commits=true&theme=dark" />
-    </a> 
+    </a>
     <a href="https://github-readme-streak-stats.herokuapp.com/?user=geoffreygarrett&theme=light/#gh-light-mode-only">
       <img width="420px"
-           alt="geoffreygarrett" 
+           alt="geoffreygarrett"
            src="https://github-readme-streak-stats.herokuapp.com/?user=geoffreygarrett&theme=light" />
     </a>
     <a href="https://github-readme-streak-stats.herokuapp.com/?user=geoffreygarrett&theme=dark/#gh-dark-mode-only">
       <img width="420px"
-           alt="geoffreygarrett" 
+           alt="geoffreygarrett"
            src="https://github-readme-streak-stats.herokuapp.com/?user=geoffreygarrett&theme=dark" />
     </a>
 </p>
@@ -48,7 +48,7 @@ M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tude
 
 ## Sometimes I blog 📝
 <p align="center">
-  <a target="_blank" href="https://github-readme-medium-recent-article.vercel.app/medium/@g.h.garrett/0"><img src="https://github-readme-medium-recent-article.vercel.app/medium/@g.h.garrett/0" alt="Recent Article 0"> 
+  <a target="_blank" href="https://github-readme-medium-recent-article.vercel.app/medium/@g.h.garrett/0"><img src="https://github-readme-medium-recent-article.vercel.app/medium/@g.h.garrett/0" alt="Recent Article 0">
   </a>
 </p>
 
@@ -77,10 +77,10 @@ into {{ add_a_an(next_launch.mission.orbit.name) }}
 
 <p float="left" align="center">
   <a href="{{ next_launch.pad.wiki_url }}" >
-    <img alt="launch-image" height="200" src="{{ next_launch.image }}" />
+    <img alt="launch-image" height="200" src="{{ next_launch.cached_launch_image }}" />
   </a>
   <a href="{{ next_launch.pad.map_url }}" >
-    <img alt="pad-location" height="200" src="{{ next_launch.pad.location.map_image }}"  />
+    <img alt="pad-location" height="200" src="{{ next_launch.cached_location_image }}"  />
   </a>
 </p>
 
