Updated space launch section

--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -77,10 +77,10 @@ into {{ add_a_an(next_launch.mission.orbit.name) }}
 
 <p float="left" align="center">
   <a href="{{ next_launch.pad.wiki_url }}" >
-    <img alt="launch-image" height="200" src="{{ next_launch.cached_launch_image }}" />
+    <img alt="launch-image" src="{{ next_launch.cached_launch_image }}" />
   </a>
   <a href="{{ next_launch.pad.map_url }}" >
-    <img alt="pad-location" height="200" src="{{ next_launch.cached_location_image }}"  />
+    <img alt="pad-location" src="{{ next_launch.cached_location_image }}"  />
   </a>
 </p>
 
