--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -56,7 +56,7 @@ M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tude
 
 ### Spotlight 💡
 The next launch, retrieved from the
-<a href="https://thespacedevs.com/">The Space Devs</a>'s public API, is the
+<a href="https://thespacedevs.com/">The Space Devs</a>' public API, is the
 {{ next_launch.name }} at the
 <a href="{{ next_launch.pad.wiki_url }}">{{ next_launch.pad.name }}</a> in
 {{ next_launch.pad.location.name }}
