--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -1,4 +1,4 @@
-## Hi there, I'm Geoffrey <img src="https://raw.githubusercontent.com/MartinHeinz/MartinHeinz/master/wave.gif" width="30px">
+![Geoffrey Garrett (72 × 20 in) (72 × 14 in)](https://user-images.githubusercontent.com/26066340/153750722-79b2b8cb-b08a-4484-8c7b-a8853eed8a9f.gif)
 
 M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tudelft.nl/en/) 🎓
 
