--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -1,4 +1,4 @@
-![Geoffrey Garrett (72 × 20 in) (72 × 14 in)](https://user-images.githubusercontent.com/26066340/153750722-79b2b8cb-b08a-4484-8c7b-a8853eed8a9f.gif)
+![Geoffrey Garrett (72 × 20 in) (72 × 14 in)(2)](https://user-images.githubusercontent.com/26066340/153759350-07f01d04-9b6f-4a9a-be25-d24eb343bb6b.gif)
 
 M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tudelft.nl/en/) 🎓
 
