--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -56,7 +56,7 @@ M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tude
 
 ### Spotlight 💡
 The next launch, retrieved from the
-<a href="https://thespacedevs.com/">The Space Devs</a>'s public API, is the
+<a href="https://thespacedevs.com/">The Space Devs</a>' public API, is the
 {{ next_launch.name }} at the
 <a href="{{ next_launch.pad.wiki_url }}">{{ next_launch.pad.name }}</a> in
 {{ next_launch.pad.location.name }}
@@ -85,6 +85,7 @@ into {{ add_a_an(next_launch.mission.orbit.name) }}
 </p>
 
 ### Within a month's time 📅
+<!-- rocket launches starts -->
 {% for launch in parse_launches_within_a_month(launches) -%}
 - \[{{ make_html_linked_time(launch.datetime) }}\]  <img width="17" src="{{get_country_flag_svg(launch.pad.location.country_code)}}" /> {{ status_emoji(launch.status.abbrev) }} {{ make_google_calender_href_icon(launch) }} **{{ launch.mission.name }}** in {{ launch.pad.location.name }}.
 {% endfor %}
