Updated link to rocket configuration

--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -70,7 +70,7 @@ into {{ add_article_prefix(next_launch.mission.orbit.name) }}
 </blockquote>
 
 <p float="left" align="center">
-  <a href="{{ next_launch.pad.wiki_url }}" >
+  <a href="{{ next_launch.rocket.configuration.wiki_url }}" >
     <img alt="launch-image" width="49%" src="{{ next_launch.cached_launch_image }}" />
   </a>
   <a href="{{ next_launch.pad.map_url }}" >
