Updated table describing launch status

--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -89,25 +89,21 @@ into {{ add_article_prefix(next_launch.mission.orbit.name) }}
     <thead>
       <tr>
         <th class="tg-0pky">Symbol</th>
-        <th class="tg-0pky">Meaning</th>
-        <th class="tg-0pky">Description</th>
+        <th class="tg-0pky">Status</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td class="tg-0pky">🟩</td>
         <td class="tg-0pky">Go For Launch (Go)</td>
-        <td class="tg-0pky">Current T-0 confirmed by official or reliable sources.</td>
       </tr>
       <tr>
         <td class="tg-0pky">🟨</td>
         <td class="tg-0pky">To Be Confirmed (TBC)</td>
-        <td class="tg-0pky">Awaiting official confirmation - current date is known with some certainty.</td>
       </tr>
       <tr>
         <td class="tg-0pky">🟧</td>
         <td class="tg-0pky">To Be Determined (TBD)</td>
-        <td class="tg-0pky">Current date is a placeholder or rough estimation based on unreliable or interpreted sources.</td>
       </tr>
     </tbody>
     </table>
