--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -22,7 +22,7 @@ M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tude
 <tr>
 <td width="50%" valign="top">
 
-<h3 align="center"> GitHub issues 🆘 </h3>
+<h3 align="center"> Issues assigned 🆘 </h3>
 
 <!-- github issues starts -->
 {% for issue in github.issues -%}
