--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -26,7 +26,7 @@ M.Sc. Aerospace Engineering at [Delft University of Technology](https://www.tude
 
 <!-- github issues starts -->
 {% for issue in github.issues -%}
-* [{{ issue.title }}]({{ issue.url }}) <br/> <sub>{{ make_html_linked_time(iso_datetime_string_to_datetime(issue.created_at, milliseconds=False)) }}</sub>
+* [{{ issue.title }}]({{ issue.html_url }}) <br/> <sub>{{ make_html_linked_time(iso_datetime_string_to_datetime(issue.created_at, milliseconds=False)) }} - <a href="{{ issue.user.html_url }}">{{ issue.user.login }}</a> </sub>
 {% endfor %}
 <!-- github issues ends -->
 
