Small modification to formatting

--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -99,6 +99,7 @@ into {{ add_article_prefix(next_launch.mission.orbit.name) }}
 
 ### Within a month's time 📅
 
+<div align="center">
 <table>
 <tr>
 <td width="50%" valign="top">
@@ -141,6 +142,7 @@ into {{ add_article_prefix(next_launch.mission.orbit.name) }}
 </tr>
 
 </table>
+</div>
 
 ## Space feed 🍽️
 <table>
