Small modification to formatting

--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -102,7 +102,7 @@ into {{ add_article_prefix(next_launch.mission.orbit.name) }}
 <div align="center">
 <table>
 <tr>
-<td width="50%" valign="top">
+<td width="50%" valign="top" align="left">
 
 <!-- rocket launches starts -->
 {% for launch in parse_launches_within_a_month(ll2.launches) -%}
