--- a/src/templates/README.md.j2
+++ b/src/templates/README.md.j2
@@ -90,10 +90,10 @@ then, this launch pad will have seen {{ next_launch.pad.total_launch_count }}
 out of {{ next_launch.pad.location.total_launch_count }} launches in this
 region. The mission's status is currently {{ next_launch.status.name }}
 ({{ next_launch.status.abbrev }}) {{ status_emoji(next_launch.status.abbrev) }} which means:
-*{{ first_letter_lower(next_launch.status.description)  }}* The mission type is
+*{{ first_letter_lower(next_launch.status.description)  }}* {{% if next_launch.mission %}} The mission type is
 {{ next_launch.mission.type }} and the payload will be injected
 into {{ add_article_prefix(next_launch.mission.orbit.name) }}
-({{ next_launch.mission.orbit.abbrev }}).
+({{ next_launch.mission.orbit.abbrev }}). {{% endif %}}
 <br>
 <blockquote>
   {{ next_launch.mission.description }}
